--- a/app/yaml/systems.yml
+++ b/app/yaml/systems.yml
@@ -30,8 +30,8 @@
       gppE: <RESERVED>
       gppF: <RESERVED>
       gppG: <RESERVED>
-      gppH:
-      gppI:
+      gppH: <RESERVED>
+      gppI: <RESERVED>
       gppJ:
       gppK:
       gppL:
